--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
 
     <link rel="stylesheet" href="src/sass/main.scss" />
-    <script type="module" src="src/js/controller.js"></script>
+    <script type="module" src="src/js/controller.js" defer></script>
 
     <title>forkify // Search over 1,000,000 recipes</title>
   </head>
@@ -19,9 +19,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <a href="">
-          <img src="src/img/logo.png" alt="Logo" class="header__logo" />
-        </a>
+        <img src="src/img/logo.png" alt="Logo" class="header__logo" />
         <form class="search">
           <input
             type="text"
@@ -75,7 +73,7 @@
                         <h4 class="preview__name">
                           Pasta with Tomato Cream ...
                         </h4>
-                        <p class="preview__publisher">The Pioneer Woman</p>
+                        <p class="preview__author">The Pioneer Woman</p>
                       </div>
                     </a>
                   </li> -->
@@ -129,8 +127,9 @@
             class="twitter-link"
             target="_blank"
             href="https://twitter.com/jonasschmedtman"
-            >Van Vien Dong</a
-          >
+            >Jonas Schmedtmann</a
+          >. Use for learning or your portfolio. Don't use to teach. Don't claim
+          as your own.
         </p>
       </div>
 
@@ -264,13 +263,13 @@
         <div class="upload__column">
           <h3 class="upload__heading">Recipe data</h3>
           <label>Title</label>
-          <input value="TEST123" required name="title" type="text" />
+          <input value="TEST23" required name="title" type="text" />
           <label>URL</label>
-          <input value="TEST123" required name="sourceUrl" type="text" />
+          <input value="TEST23" required name="sourceUrl" type="text" />
           <label>Image URL</label>
-          <input value="TEST123" required name="image" type="text" />
+          <input value="TEST23" required name="image" type="text" />
           <label>Publisher</label>
-          <input value="TEST123" required name="publisher" type="text" />
+          <input value="TEST23" required name="publisher" type="text" />
           <label>Prep time</label>
           <input value="23" required name="cookingTime" type="number" />
           <label>Servings</label>
